# hugh-platform

./: .travis.yml  CMakeLists.txt  README.rst
cmake/: FindXCB.cmake
inc/hugh/platform/: posix.hpp  sdl.hpp  win32.hpp  xcb.hpp
inc/hugh/platform/application/: base.hpp  base.inl  command_line.hpp  multi_instance.hpp  single_instance.hpp
inc/hugh/platform/posix/application/: base.hpp
inc/hugh/platform/sdl/: application.hpp  io.hpp  window.hpp
inc/hugh/platform/sdl/application/: base.hpp
inc/hugh/platform/sdl/window/: context.hpp  input.hpp  update.hpp
inc/hugh/platform/win32/: application.hpp  io.hpp  utilities.hpp  utilities.inl  window.hpp
inc/hugh/platform/win32/application/: base.hpp
inc/hugh/platform/win32/window/: context.hpp  input.hpp  update.hpp
inc/hugh/platform/window/: base.hpp  base.inl  interactive.hpp  interactive.inl  intractive.hpp  manager.hpp  manager.inl  rect.hpp  simple.hpp  simple.inl
inc/hugh/platform/xcb/: io.hpp  window.hpp
inc/hugh/platform/xcb/window/: base.hpp  context.hpp  input.hpp  manager.hpp  simple.hpp  update.hpp
share/doc/hugh/: CMakeLists.txt
src/lib/platform/: CMakeLists.txt  version.hpp.in
src/lib/platform/application/: base.cpp  command_line.cpp  multi_instance.cpp  single_instance.cpp
src/lib/platform/posix/: CMakeLists.txt
src/lib/platform/posix/application/: base.cpp
src/lib/platform/posix/test/: CMakeLists.txt  application.cpp
src/lib/platform/sdl/: CMakeLists.txt  io.cpp
src/lib/platform/sdl/application/: base.cpp
src/lib/platform/sdl/test/: application.cpp  io.cpp  window_interactive.cpp  window_simple.cpp
src/lib/platform/sdl/window/: context.cpp  input.cpp  update.cpp
src/lib/platform/test/: CMakeLists.txt  application.cpp  command_line.cpp  manager.cpp  rect.cpp  shared.hpp  window.cpp
src/lib/platform/win32/: CMakeLists.txt  io.cpp  utilities.cpp
src/lib/platform/win32/application/: base.cpp
src/lib/platform/win32/test/: CMakeLists.txt  application.cpp  io.cpp  window_interactive.cpp  window_simple.cpp
src/lib/platform/win32/window/: context.cpp  input.cpp  update.cpp
src/lib/platform/window/: base.cpp  interactive.cpp  manager.cpp  rect.cpp  simple.cpp
src/lib/platform/xcb/: CMakeLists.txt  io.cpp
src/lib/platform/xcb/test/: CMakeLists.txt  io.cpp  window_base.cpp  window_interactive.cpp  window_manager.cpp  window_simple.cpp
src/lib/platform/xcb/window/: base.cpp  context.cpp  input.cpp  manager.cpp  simple.cpp  update.cpp
